--- a/prj1/index.html
+++ b/prj1/index.html
@@ -136,7 +136,7 @@
 
                 </video>
                 <button class="join-us-video-play-button" type="button">
-
+                    Play
                 </button>
             </div>
             <div class="join-us-body container">
@@ -145,15 +145,18 @@
                 </h2>
                 <form  class="join-us-form">
                     <header class="join-us-form-header">
-                        <h3 class="join-us-form-title backdrop-title" data-title="Go !">Start here</h3>
+                        <h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">Start here</h3>
                         <div class="join-us-form-subtitle">
                             fill the form below to start your journey
                         </div>
                     </header>
                     <div class="join-us-form-body">
-                        <label class="visually-hidden" for="username">Name</label>
-                        <input type="text" class="join-us-form-input input" id="username" placeholder="Name">
+                        <label class="visually-hidden" for="name">Name</label>
+                        <input type="email" class="join-us-form-input input" id="name" placeholder="Name">
+                        <label class="visually-hidden" for="email">Email</label>
+                        <input type="email" class="join-us-form-input input" id="email" placeholder="Email">
                     </div>
+                    <button class="join-us-form-button button transparent" type="submit">Subscribe</button>
                 </form>
             </div>
         </section>
