--- a/prj1/index.html
+++ b/prj1/index.html
@@ -155,9 +155,21 @@
                         <input type="email" class="join-us-form-input input" id="name" placeholder="Name">
                         <label class="visually-hidden" for="email">Email</label>
                         <input type="email" class="join-us-form-input input" id="email" placeholder="Email">
+                        <button class="join-us-form-button button transparent" type="submit">Subscribe</button>
                     </div>
-                    <button class="join-us-form-button button transparent" type="submit">Subscribe</button>
                 </form>
+            </div>
+        </section>
+        <section class="location">
+            <img src="./images/map.jpg" alt="Branches on the map" class="location-map-image" width="960" height="600" loading="lazy"/>
+            <div class="location-body">
+                <h2 class="location-title title-medium backdrop-title centered" data-title="Look">
+                    Find us near you
+                </h2>
+                <div class="location-description">
+                    <p>Nec suas signiferumque id. An eum labore commodo principes. Usu diam noluisse cu, nam adipisci</p>
+                </div>
+                <a href="/" class="location-button button transparent">view more</a>
             </div>
         </section>
     </main>
