Family section start

--- a/prj1/index.html
+++ b/prj1/index.html
@@ -172,6 +172,10 @@
                 <a href="/" class="location-button button transparent">view more</a>
             </div>
         </section>
+        <section class="family">
+            <header class="family-header"></header>
+            <div class="family-body"></div>
+        </section>
     </main>
 </body>
 </html>
