separation section is done

--- a/prj2/index.html
+++ b/prj2/index.html
@@ -51,12 +51,29 @@
                 </div>
                 <div class="banner-text-credits">
                     <img src="./images/powered%20by.svg" alt="Powered by Solana" class="banner-text-powered">
-                    <button class="banner-text-credits-button button" type="button">Discover More</button>
+                    <button class="banner-text-credits-button button button-link" type="button">Discover More</button>
                 </div>
             </div>
             <div class="banner-background-image">
-                <img src="./images/section_1_hand.png" alt="" height="878" width="659">
+                <img src="./images/section_1_hand.png" alt="" height="850" width="639">
             </div>
+        </section>
+        <section class="separate">
+            <div class="separate-text">
+                <img src="./icons/separate.svg" alt="" class="separate-image" height="30" width="30">
+                <p>new way to reach the new fan</p>
+                <img src="./icons/separate.svg" alt="" class="separate-image" height="30" width="30">
+                <p>new way to reach the new fan</p>
+                <img src="./icons/separate.svg" alt="" class="separate-image" height="30" width="30">
+                <p>new way to reach the new fan</p>
+                <img src="./icons/separate.svg" alt="" class="separate-image" height="30" width="30">
+                <p>new way to reach the new fan</p>
+                <img src="./icons/separate.svg" alt="" class="separate-image" height="30" width="30">
+                <p>new way to reach the new fan</p>
+            </div>
+        </section>
+        <section class="work">
+
         </section>
     </main>
 </body>
