--- a/prj2/index.html
+++ b/prj2/index.html
@@ -73,7 +73,45 @@
             </div>
         </section>
         <section class="work">
+            <div class="work-text">
+                <h1 class="work-text-title">
+                    How do Music <br/>
+                    NFTs work?
+                </h1>
+                <div class="work-text-description">
+                    <p>NFTs are unique assets stored and tradable on a blockchain. They are, <br/>
+                        immutable, scarce and publicly verifiable.
+                        In the music world, artistes<br/>
+                        get to sell limited digital content to their fans who pay via crypto. You<br/>
+                        can now
+                        produce any music content that cannot be counterfeited.
+                    </p>
+                </div>
+            </div>
+            <div class="work-circle">
+                <img src="./images/section_2_circle.png" class="work-circle-image" alt="" height="568" width="568">
+            </div>
+        </section>
+        <section class="marketplace">
+            <div class="marketplace-images">
 
+            </div>
+            <div class="marketplace-text">
+                <h1 class="marketplace-text-title">
+                    Music NFT <br/>
+                    Marketplace
+                </h1>
+                <div class="marketplace-text-description">
+                    <p>
+                        Create your first music NFTs with NFT market for musicians. Create <br/>
+                        music and music videos just under the $1, the platform works with BSC <br/>
+                        blockchain and supports mp4. With AirNFTs, you are getting the control <br/>
+                        over your NFTs, no middle man cutting your sales. Create, Buy, Sell and <br/>
+                        Earn with your music NFTs.
+                    </p>
+                </div>
+                <button class="marketplace-text-button button button-link">Explore Marketplace</button>
+            </div>
         </section>
     </main>
 </body>
