section NFT marketplace is done

--- a/prj2/index.html
+++ b/prj2/index.html
@@ -94,7 +94,42 @@
         </section>
         <section class="marketplace">
             <div class="marketplace-images">
-
+                <div class="marketplace-images-item">
+                        <img src="./images/album/section_3_1.jpg" height="193" width="194" alt="" class="marketplace-images-image">
+                        <div class="marketplace-images-description">
+                            <h5>Rap Music</h5>
+                            <p>
+                                0.3234
+                            </p>
+                        </div>
+                    </div>
+                <div class="marketplace-images-item">
+                    <img src="./images/album/section_3_2.jpg" height="193" width="194" alt="" class="marketplace-images-image">
+                    <div class="marketplace-images-description">
+                        <h5>Rap Music</h5>
+                        <p>
+                            0.3234
+                        </p>
+                    </div>
+                </div>
+                <div class="marketplace-images-item">
+                    <img src="./images/album/section_3_3.jpg" height="193" width="194" alt="" class="marketplace-images-image">
+                    <div class="marketplace-images-description">
+                        <h5>Rap Music</h5>
+                        <p>
+                            0.3234
+                        </p>
+                    </div>
+                </div>
+                <div class="marketplace-images-item">
+                    <img src="./images/album/section_3_4.jpg" height="193" width="194" alt="" class="marketplace-images-image">
+                    <div class="marketplace-images-description">
+                        <h5>Rap Music</h5>
+                        <p>
+                            0.3234
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="marketplace-text">
                 <h1 class="marketplace-text-title">
@@ -112,6 +147,7 @@
                 </div>
                 <button class="marketplace-text-button button button-link">Explore Marketplace</button>
             </div>
+
         </section>
     </main>
 </body>
