--- a/prj2/index.html
+++ b/prj2/index.html
@@ -147,7 +147,207 @@
                 </div>
                 <button class="marketplace-text-button button button-link">Explore Marketplace</button>
             </div>
-
+        </section>
+        <section class="community">
+            <h1 class="community-title">Engage your <br/>
+                Fans with community</h1>
+            <div class="community-body">
+                <div class="community-body-description">
+                    <h2 class="community-body-description-title">01/</h2>
+                    <p>
+                        Artists themselves become a platform. NFTs <br/>
+                        allow artistes, especially upcoming ones, to <br/>
+                        create an ecosystem that allows genuine fans to <br/>
+                        buy into their market.
+                    </p>
+                </div>
+                <div class="community-body-description">
+                    <h2 class="community-body-description-title">02/</h2>
+                    <p>
+                        Artists themselves become a platform. NFTs<br/>
+                        allow artistes, especially upcoming ones, to<br/>
+                        create an ecosystem that allows genuine fans to<br/>
+                        buy into their market.
+                    </p>
+                </div>
+                <div class="community-body-description">
+                    <h2 class="community-body-description-title">03/</h2>
+                    <p>
+                        Artists themselves become a platform. NFTs<br/>
+                        allow artistes, especially upcoming ones, to<br/>
+                        create an ecosystem that allows genuine fans to<br/>
+                        buy into their market.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="discover">
+            <div class="discover-title">
+                <h2 class="discover-title-text">Discover <br/> Music NFT</h2>
+            </div>
+            <div class="discover-filter">
+                <p>Music Genre</p>
+                <ul class="discover-list">
+                    <li class="discover-item">
+                        <button class="button">
+                            Rock
+                        </button>
+                    </li>
+                    <li class="discover-item">
+                        <button class="button">
+                            Pop
+                        </button>
+                    </li>
+                    <li class="discover-item">
+                        <button class="button">
+                            KPop
+                        </button>
+                    </li>
+                    <li class="discover-item">
+                        <button class="button">
+                            Jazz
+                        </button>
+                    </li>
+                    <li class="discover-item">
+                        <button class="button">
+                            Funk
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="album">
+            <div class="discover-album">
+                <div class="discover-album-item">
+                    <img src="./images/music/1.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/2.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/3.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/4.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/5.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/6.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/7.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/8.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/9.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div>
+                </div>
+                <div class="discover-album-item">
+                    <img src="./images/music/10.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div></div>
+                <div class="discover-album-item">
+                    <img src="./images/music/11.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div></div>
+                <div class="discover-album-item">
+                    <img src="./images/music/12.jpg" alt="" class="discover-album-image">
+                    <h4 class="discover-album-title">Heart & Sol</h4>
+                    <div class="discover-album-item-description">
+                        <p><span>0.3234</span> <span>16 tokens</span></p>
+                    </div>
+                    <div class="discover-album-item-buttons">
+                        <button class="button button-play">Play now</button>
+                        <button class="button button-buy">Buy nft</button>
+                    </div></div>
+            </div>
         </section>
     </main>
 </body>
