--- a/Prj3/index.html
+++ b/Prj3/index.html
@@ -9,6 +9,68 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+<!--HEADER-->
+    <header class="header">
+        <div class="header__inner container">
+            <a href="/" class="header__logo logo">
+                <img src="./images/Logo.svg" alt="Positivus" width="220" height="36" class="logo__image">
+            </a>
+            <nav class="header__menu hidden-mobile">
+                <ul class="header__menu-list">
+                    <li class="header__menu-item">
+                        <a href="/" class="header__menu-link">About us</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="/" class="header__menu-link">Services</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="/" class="header__menu-link">Use Cases</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="/" class="header__menu-link">Pricing</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="/" class="header__menu-link">Blog</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="header__button button button--transparent hidden-mobile" type="button">
+                Request a quote
+            </button>
+            <button class="header__burger-button burger-button visible-mobile" type="button" onclick="mobileOverlay.showModal()">
+                <span class="visually-hidden">Open navigation menu</span>
+            </button>
+        </div>
+    </header>
+<!--HEADER END-->
 
+<!--MOBILE BURGER MENU-->
+    <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
+        <form action="" class="mobile-overlay__close-button-wrapper" method="dialog">
+            <button class="mobile-overlay__close-button cross-button" type="submit">
+                <span class="visually-hidden">Close navigation menu</span>
+            </button>
+        </form>
+        <div class="mobile-overlay__body">
+            <ul class="mobile-overlay__list">
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">About us</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Services</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Use Cases</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Pricing</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Blog</a>
+                </li>
+            </ul>
+        </div>
+    </dialog>
+<!--MOBILE BURGER MENU END-->
 </body>
 </html>
