--- a/Prj3/index.html
+++ b/Prj3/index.html
@@ -43,7 +43,84 @@
         </div>
     </header>
 <!--HEADER END-->
+    <main class="content">
+        <section class="section section--hidden-x container">
+            <div class="section__body">
+                <div class="hero">
+                    <div class="hero__main">
+                        <div class="hero__body">
+                            <h1 class="hero__title">Navigating the digital landscape for success</h1>
+                            <div class="hero__description">
+                                <p>
+                                    Our digital marketing agency helps businesses grow and succeed online through a range of services
+                                    including SEO, PPC, social media marketing, and content creation.
+                                </p>
+                            </div>
+                            <button class="hero__button button" type="button">
+                                Book a consultation
+                            </button>
+                        </div>
+                        <img src="./images/hero-bg.svg" alt="" class="hero__image" width="600" height="515">
+                    </div>
+                    <div class="hero__partners">
+                        <h2 class="visually-hidden">Our Partners</h2>
+                        <ul class="hero__partners-list">
+                            <li class="hero__partners-item">
+                                <img src="./images/partners/1.svg" alt="Amazon" class="hero__partners-image" width="130" height="48">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img src="./images/partners/2.svg" alt="Dribbble" class="hero__partners-image" width="130" height="48">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img src="./images/partners/3.svg" alt="HubSpot" class="hero__partners-image" width="130" height="48">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img src="./images/partners/4.svg" alt="Notion" class="hero__partners-image" width="130" height="48">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img src="./images/partners/5.svg" alt="Netflix" class="hero__partners-image" width="130" height="48">
+                            </li>
+                            <li class="hero__partners-item">
+                                <img src="./images/partners/6.svg" alt="Zoom" class="hero__partners-image" width="130" height="48">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section container">
+            <header class="section__header">
+                <h2 class="section__title puddle-bg">Services</h2>
+                <div class="section__description">
+                    <p>
+                        At our digital marketing agency, we offer a range of services to help
+                        businesses grow and succeed online.
+                        These services include:
+                    </p>
+                </div>
+            </header>
+            <div class="section__body">
+                <div class="services">
+                    <ul class="services__list">
+                        <li class="services__item">
+                            <article class="service-card">
+                                <div class="service-card__body">
+                                    <h3 class="service-card__title">
+                                        <span class="puddle-bg">Search engine</span>
+                                        <span class="puddle-bg">optimization</span>
+                                    </h3>
+                                </div>
+                                <img src="" alt="" class="service-card__image">
+                            </article>
+                        </li>
+                    </ul>
+                    <div class="services__banner banner">
 
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 <!--MOBILE BURGER MENU-->
     <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
         <form action="" class="mobile-overlay__close-button-wrapper" method="dialog">
