service section is done

--- a/Prj3/index.html
+++ b/Prj3/index.html
@@ -115,7 +115,7 @@
                                                 <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="#B9FF66"/>
                                             </svg>
                                         </span>
-                                        <span class="service-card__link-label"></span>
+                                        <span class="service-card__link-label">Learn more</span>
                                     </a>
                                 </div>
                                 <img src="./images/service/1.svg" alt="" class="service-card__image" width="210" height="170">
@@ -134,7 +134,7 @@
                                                 <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="#B9FF66"/>
                                             </svg>
                                         </span>
-                                        <span class="service-card__link-label"></span>
+                                        <span class="service-card__link-label">Learn more</span>
                                     </a>
                                 </div>
                                 <img src="./images/service/2.svg" alt="" class="service-card__image" width="210" height="170">
@@ -153,7 +153,7 @@
                                                 <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="#B9FF66"/>
                                             </svg>
                                         </span>
-                                        <span class="service-card__link-label"></span>
+                                        <span class="service-card__link-label">Learn more</span>
                                     </a>
                                 </div>
                                 <img src="./images/service/3.svg" alt="" class="service-card__image" width="210" height="170">
@@ -172,7 +172,7 @@
                                                 <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="#B9FF66"/>
                                             </svg>
                                         </span>
-                                        <span class="service-card__link-label"></span>
+                                        <span class="service-card__link-label">Learn more</span>
                                     </a>
                                 </div>
                                 <img src="./images/service/4.svg" alt="" class="service-card__image" width="210" height="170">
@@ -191,7 +191,7 @@
                                                 <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="#B9FF66"/>
                                             </svg>
                                         </span>
-                                        <span class="service-card__link-label"></span>
+                                        <span class="service-card__link-label">Learn more</span>
                                     </a>
                                 </div>
                                 <img src="./images/service/5.svg" alt="" class="service-card__image" width="210" height="170">
@@ -210,7 +210,7 @@
                                                 <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="#B9FF66"/>
                                             </svg>
                                         </span>
-                                        <span class="service-card__link-label"></span>
+                                        <span class="service-card__link-label">Learn more</span>
                                     </a>
                                 </div>
                                 <img src="./images/service/6.svg" alt="" class="service-card__image" width="210" height="170">
@@ -231,7 +231,7 @@
                                 </div>
                                 <button class="banner__button button">Get your free proposal</button>
                             </div>
-                            <img src="./images/service/banner.svg" alt="" class="banner__image" height="395" width="494">
+                            <img src="./images/service/banner.svg" alt="" class="banner__image hidden-mobile" height="395" width="494">
                         </div>
                     </div>
                 </div>
