--- a/Prj3/index.html
+++ b/Prj3/index.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </section>
-        <section class="section container">
+        <section class="section section--hidden-x container">
             <header class="section__header">
                 <h2 class="section__title puddle-bg">Services</h2>
                 <div class="section__description">
@@ -285,6 +285,37 @@
                     </ul>
                 </div>
             </div>
+        </section>
+        <section class="section container">
+            <header class="section__header">
+                <h2 class="section__title puddle-bg">Our Working Process </h2>
+                <div class="section__description">
+                    <p>
+                        Step-by-Step Guide to . Your <br/> Business Goals
+                    </p>
+                </div>
+            </header>
+        <div class="section_body">
+            <div class="process">
+                <ol class="process__list">
+                    <li class="process__item">
+                        <details class="process__accordion">
+                            <summary class="process__accordion-header">
+                                <h3 class="process__accordion-title">
+                                    Consultation
+                                </h3>
+                                <span class="process__accordion-indicator">
+                                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                                </span>
+                            </summary>
+                            <div class="process_accordion-body">
+
+                            </div>
+                        </details>
+                    </li>
+                </ol>
+            </div>
+        </div>
         </section>
     </main>
 <!--MOBILE BURGER MENU-->
