--- a/Prj3/index.html
+++ b/Prj3/index.html
@@ -299,10 +299,85 @@
             <div class="process">
                 <ol class="process__list">
                     <li class="process__item">
-                        <details class="process__accordion">
+                        <details class="process__accordion" open>
                             <summary class="process__accordion-header">
                                 <h3 class="process__accordion-title">
                                     Consultation
+                                </h3>
+                                <span class="process__accordion-indicator">
+                                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                                </span>
+                            </summary>
+                            <div class="process_accordion-body">
+
+                            </div>
+                        </details>
+                    </li>
+                    <li class="process__item">
+                        <details class="process__accordion">
+                            <summary class="process__accordion-header">
+                                <h3 class="process__accordion-title">
+                                    Research and Strategy Development
+                                </h3>
+                                <span class="process__accordion-indicator">
+                                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                                </span>
+                            </summary>
+                            <div class="process_accordion-body">
+
+                            </div>
+                        </details>
+                    </li>
+                    <li class="process__item">
+                        <details class="process__accordion">
+                            <summary class="process__accordion-header">
+                                <h3 class="process__accordion-title">
+                                    Implementation
+                                </h3>
+                                <span class="process__accordion-indicator">
+                                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                                </span>
+                            </summary>
+                            <div class="process_accordion-body">
+
+                            </div>
+                        </details>
+                    </li>
+                    <li class="process__item">
+                        <details class="process__accordion">
+                            <summary class="process__accordion-header">
+                                <h3 class="process__accordion-title">
+                                    Monitoring and Optimization
+                                </h3>
+                                <span class="process__accordion-indicator">
+                                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                                </span>
+                            </summary>
+                            <div class="process_accordion-body">
+
+                            </div>
+                        </details>
+                    </li>
+                    <li class="process__item">
+                        <details class="process__accordion">
+                            <summary class="process__accordion-header">
+                                <h3 class="process__accordion-title">
+                                    Reporting and Communication
+                                </h3>
+                                <span class="process__accordion-indicator">
+                                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                                </span>
+                            </summary>
+                            <div class="process_accordion-body">
+
+                            </div>
+                        </details>
+                    </li>
+                    <li class="process__item">
+                        <details class="process__accordion">
+                            <summary class="process__accordion-header">
+                                <h3 class="process__accordion-title">
+                                    Continual Improvement
                                 </h3>
                                 <span class="process__accordion-indicator">
                                     During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
